<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.layouts.ConstraintFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnOne,btnTwo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOne"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThree"
        app:layout_constraintStart_toStartOf="@+id/guidelineThree"
        app:layout_constraintTop_toTopOf="@+id/guidelineOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOne"
        app:layout_constraintEnd_toStartOf="@+id/guidelineFour"
        app:layout_constraintStart_toStartOf="@+id/guidelineFour"
        app:layout_constraintTop_toTopOf="@+id/guidelineOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTwo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThree"
        app:layout_constraintStart_toStartOf="@+id/guidelineThree"
        app:layout_constraintTop_toTopOf="@+id/guidelineTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTwo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineFour"
        app:layout_constraintStart_toStartOf="@+id/guidelineFour"
        app:layout_constraintTop_toTopOf="@+id/guidelineTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>